--- a/index.html
+++ b/index.html
@@ -25,14 +25,17 @@
             </h2>
             <div id="tree-container" class="hiding-places">
                 <div class="hiding-place">
+                    <div id="tree-face" class="face"></div>
                     <img src="./assets/tree.webp" class="hiding-img" />
                     <button id="tree-button">Tree</button>    
                 </div>
-                <div id="boulder-container" class="hiding-place">
+                <div id="boulder-container" class="hiding-place .face">
+                    <div id="boulder-face" class="face"></div>
                     <img src="./assets/boulder.png" class="hiding-img" />
                     <button id="boulder-button">Boulder</button>
                 </div>
                 <div id="shed-container" class="hiding-place">
+                    <div id="shed-face" class="face"></div>
                     <img src="./assets/shed.png" class="hiding-img" />
                     <button id="shed-button">Shed</button>        
                 </div>
